objects/Track_Out_Of_Office__c.object
<CustomObject>
    <fields>
        <fullName>Duration_Hrs__c</fullName>
        <formula>if(Not (ISBLANK(Out_of_office_Disabled_On__c)) , 
TEXT(FLOOR((Out_of_office_Disabled_On__c - Out_of_office_Enabled_On__c)*24))&amp;&apos; Hrs &apos;, 
TEXT(FLOOR((Now() - Out_of_office_Enabled_On__c)*24))&amp;&apos; Hrs &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hrs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_office_Disabled_On__c</fullName>
        <label>Out of office Disabled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_of_office_Enabled_On__c</fullName>
        <label>Out of office Enabled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Track_Out_Of_Office</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Track Out Of Office</label>
    <nameField>
        <label>Track Out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Out Of Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>